# VeilPaste

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md  README.zh-CN.md
.github/workflows/: ci.yml  pages.yml
chrome-extension/: README.md  help.html  manifest.json  package.json
chrome-extension/icons/: README.md
chrome-extension/scripts/: build.mjs  check-contract.mjs  check-package.mjs
chrome-extension/src/: content.ts  detector.ts  options.ts
chrome-extension/test/: detector.test.mjs
crates/safeprompt-cli/: Cargo.toml
crates/safeprompt-cli/src/: main.rs
crates/safeprompt-cli/tests/: cli.rs
crates/safeprompt-core/: Cargo.toml
crates/safeprompt-rules/: Cargo.toml
crates/veilpaste-cli/: Cargo.toml
crates/veilpaste-cli/src/: main.rs
crates/veilpaste-cli/tests/: cli.rs
crates/veilpaste-core/: Cargo.toml
crates/veilpaste-rules/: Cargo.toml
docs/: demo-script.md  feedback-questions.md  known-misses.md  threat-model.md  trial-guide.md  usage-guide.md
fixtures/curl/: request.curl
fixtures/env/: openai.env
fixtures/false-positives/: common.txt
fixtures/headers/: auth.txt
fixtures/json/: config.json
fixtures/realistic/: browser-copy-as-curl.txt  docker-auth.json  env.local  manifest.json  npmrc.txt  private-key.env  pypirc.txt
fixtures/shared-contract/: README.md  rules.json  schema.json
fixtures/shared-vectors/: false-positives.json  p0-secrets.json
fixtures/yaml/: config.yaml
scripts/: install.sh
site/: README.md  index.html  privacy.html  site-i18n.js  style.css  support.html
(+7 files in other folders)
