[package]
name = "safeprompt-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "safeprompt"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
safeprompt-core = { path = "../safeprompt-core" }
serde_json.workspace = true

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
