[package]
name = "veilpaste-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "veilpaste"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
veilpaste-core = { path = "../veilpaste-core" }
serde_json.workspace = true

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
